--- a/package.json
+++ b/package.json
@@ -9,10 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.15",
+    "@tensorflow/tfjs": "^2.8.6",
+    "@tensorflow/tfjs-react-native": "^1.0.0",
+    "expo": "^49.0.0",
+    "expo-camera": "~13.4.4",
+    "expo-file-system": "~15.4.5",
+    "expo-gl": "~13.0.1",
+    "expo-sqlite": "~11.3.3",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.19",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-reanimated": "~3.3.0",
+    "expo-asset": "~8.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
